@@ -5,6 +5,11 @@ apt (0.9.11) UNRELEASED; urgency=low
   * Show a error message if {,dist-}upgrade is used with additional
     arguments (closes: #705510)
 
+  [ Michael Vogt ]
+  * lp:~mvo/apt/config-clear:
+    - support Configuration.Clear() for a clear of the entire 
+      configuration
+
  -- Michael Vogt <michael.vogt@ubuntu.com>  Thu, 15 Aug 2013 09:27:35 +0200
 
 apt (0.9.10) unstable; urgency=low
